--- a/package.json
+++ b/package.json
@@ -16,8 +16,8 @@
     "optimize-css-assets-webpack-plugin": "^5.0.1",
     "sass-loader": "^7.1.0",
     "style-loader": "^0.23.1",
+    "terser-webpack-plugin": "^1.2.3",
     "webpack": "^4.28.4",
-    "webpack-cli": "^3.2.1",
-    "uglifyjs-webpack-plugin": "^2.1.2"
+    "webpack-cli": "^3.2.1"
   }
 }
